--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dfion.github.io/hugotest.github.io/"
+publishDir = "docs"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "ananke"
